--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>My Portfolio</h1>
-								<p> This is my ePortfolio where I will show my work that we learn in a computer science program. Lately weve been doing coding but you might see some digital arts, some games, small animations and even some personal projects</p>
+								<p> This is my ePortfolio where I will show my work that we learn in a computer science program. Lately we've been doing coding but you might see some digital arts, some games, small animations and even some personal projects</p>
 							</div>
 						</div>
 						<nav>
@@ -44,11 +44,10 @@
 
 						<!-- Work -->
 							<article id="work">
-								<h2 class="major">Work</h2>
+								<h2 class="major">Projects</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
-							</article>
+								<p>Here are some of my favourite projects i've done in the two years of being in a program using different apps.</p>
+								</article>
 
 						<!-- About -->
 							<article id="about">
