added and fixed iles

--- a/index.html
+++ b/index.html
@@ -45,8 +45,17 @@
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">Projects</h2>
-								
 								<p>Here are some of my favourite projects i've done in the two years of being in a program using different apps.</p>
+								<ul>
+									<div class="card">
+    <div class="card-image"><img src="images/992 gt3rs/992 gt3rs-1.png" alt="porsche 992 gt3rs" width="175px" height="125px"></div>
+    <div class="category"> digital-arts </div>
+    <div class="heading"> <a href="https://github.com/Vampstu12/digital-arts">In this repository i show my digital art work done with mr.Swift. </a>
+        <div class="author"> By <span class="name">Logan</span></div>
+    </div>
+</div>
+									<li><a href="https://github.com/Vampstu12/html-website-practices">- I show some HTML work and websites that i made to practice on.</a></li>
+								</ul>
 								</article>
 
 						<!-- About -->
