--- a/index.html
+++ b/index.html
@@ -50,16 +50,25 @@
 									<div class="card">
     	<div class="card-image"><img src="images/992 gt3rs/992 gt3rs-1.png" alt="porsche 992 gt3rs" width="175px" height="125px"></div>
    		<div class="category"> digital-arts </div>
-    	<div class="heading"> <a href="https://github.com/Vampstu12/digital-arts">In this repository i show my digital art work done with mr.Swift. </a>
+   		<div class="heading"> <a href="https://github.com/Vampstu12/digital-arts" target="_blank">In this repository i show my digital art work done with mr.Swift. </a>
        	 <div class="author"> By <span class="name">Vampstu12</span></div>
-   	 </div>
+			
+		</div>
 	</div>
 														<div class="card">
     	<div class="card-image"><img src="images/htm cover.jpg" alt="html work" width="175px" height="125px"></div>
     	<div class="category"> html-website-practices</div>
-    	<div class="heading"> <a href="https://github.com/Vampstu12/html-website-practices">In this repository i show some HTML coding work to create basic websites. </a>
+    	<div class="heading"> <a href="https://vampstu12.github.io/html-website-practices/" target="_blank">In this section i show some HTML coding work to create basic websites. </a>
         	<div class="author"> By <span class="name">Vampstu12</span></div>
     	</div>
+	</div>
+		<div class="card">
+    	<div class="card-image"><img src="images/Screenshot 2026-01-19 150210.png" alt="" width="175px" height="125px"></div>
+   		<div class="category"> digital-arts </div>
+   		<div class="heading"> <a href="https://github.com/Vampstu12/Unity-Game-dev-projects" target="_blank">In this other website i show my Unity game dev work done with mr.Sweica. </a>
+       	 <div class="author"> By <span class="name">Vampstu12</span></div>
+			
+		</div>
 	</div>
 	</ul>
 								</article>
@@ -348,7 +357,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net" target="_blank">HTML5 UP</a>.</p>
 					</footer>
 
 			</div>
