fixed ican name

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>My Portfolio</h1>
-								<p> This is my ePortfolio where I will show my work that we learn in a computer science program (iCan). Lately we've been doing coding but you might see some digital arts, some games, small animations and even some personal projects</p>
+								<p> This is my ePortfolio where I will show my work that we learn in a computer science program (ITEC). Lately we've been doing coding but you might see some digital arts, some games, small animations and even some personal projects</p>
 							</div>
 						</div>
 						<nav>
